--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
 #main-header{
     width: 100%;
     background: linear-gradient(to right , #00B4FA, #0017FA, #8201FA);
+    color: white;
 }
 
 #main-header h1{
