--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,32 @@
-body{
-    margin: 0;
+:root{
+    --tran-fast: 0.5s ease all;
+    --tran-medium: 1.5s ease all;
+    --tran-slow: 3s ease all;
 }
 
-#main-header{
+body{
+    margin: 0;
     width: 100%;
-    background: linear-gradient(to right , #00B4FA, #0017FA, #8201FA);
+}
+
+header{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to right , #00B4FA, #0017FA, #031926);
     color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: height 0.5s ease;
+    z-index: 100;/* situado por arriba de los demas elementos*/
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header.animated-header{
+    height: 10%;
 }
 
 #main-header h1{
@@ -16,8 +37,13 @@ body{
 
 .menu{
     width: 100%;
+    height: auto;
     background-color: aqua;
     margin: 0;
+    position: fixed;
+    top: 10%;
+    left: 0;
+    z-index: 90;
 }
 
 .menu ul{
@@ -34,11 +60,21 @@ body{
     text-align: center;
 }
 
-#main-section{
+#section-container{
+    width: 100%;
+    height: 100vh;
+}
+
+.section{
     width: 100%;
     background-color: blueviolet;
     display: flex;
     flex-wrap: wrap;
+}
+
+.section h1{
+    width: 100%;
+    text-align: center;
 }
 
 /*################################ card-article styles ######################*/
@@ -47,6 +83,10 @@ body{
     background-color: white;
     margin: 1%;
     border-radius: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-article h2{
@@ -65,4 +105,7 @@ body{
     color: white;
     margin: 0;
     padding: 1%;
+    position: fixed;
+    bottom: 0;
+    z-index: 90;
 }
