Arreglando desplazamiento del menu horizontal

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     --white-color: #f0f0f0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     margin: 0;
     width: 100%;
@@ -186,6 +190,7 @@ body{
     top: 10vh;
     left: 0;
     padding-bottom: 7vh; /* 5% del alto del footer + 1% del padding superior e inferior del footer + 1% para separarlo un poco mas*/
+    transition: all 0.5s ease;
 }
 
 /* menu de navegacion*/
@@ -257,6 +262,8 @@ body{
     background-color: blueviolet;
     display: flex;
     flex-wrap: wrap;
+    scroll-margin-top: 10vh;
+    padding-top: 3vh;
 }
 
 .section h1{
