--- a/css/style.css
+++ b/css/style.css
@@ -104,11 +104,11 @@ body{
     opacity: 1;
 }
 
-.glow-element:active::after{
+.transparent-element:active::after{
     background: transparent;
 }
 
-.glow-element:active{
+.transparent-element:active{
     color: #000;
     font-weight: bold;
 }
@@ -379,7 +379,7 @@ body{
     width: 100%;
 
     height: 5vh;
-    background-color: black;
+    background-color: var(--black-transparent);
     color: white;
     margin: 0;
     padding: 1%;
