--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,10 @@
     --tran-fast: 0.5s ease all;
     --tran-medium: 1.5s ease all;
     --tran-slow: 3s ease all;
-    --black-color: #161a20;
-    --black-transparent: rgba(0, 0, 0, 0.7);
+    --black-primary: #161616;
+    --black-button: #161a20;
+    --black-article: #333;
+    --black-transparent: rgba(0, 0, 0, 0.8);
     --white-color: #f0f0f0;
     --border-radius-article: 12px;
 }
@@ -18,7 +20,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     /*background-image: linear-gradient(to top right, #63B0F8, #2791F5, #096CC8, #053C70);*/
-    background-color: #161616;
+    background-color: var(--black-primary);
 }
 
 /* ################################### estilos generales ###################################*/
@@ -33,7 +35,7 @@ body{
 /* capa superior, botones inicialmente en negro */
 .custom-button{
     padding: 1em 2em;
-    background-color: var(--black-color);
+    background-color: var(--black-button);
     border: none;
     color: var(--white-color);
     border-radius: 1000px;
@@ -70,7 +72,7 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #333;
+    background-color: var(--black-article);
     left: 0;
     top: 0;
     border-radius: 10px;
@@ -168,9 +170,9 @@ body{
     justify-content: space-evenly;
 }
 
-#cv{
+/*#cv{
     height: 64px;
-}
+}*/
 
 /* contenedor de imagen */
 #image-header{
@@ -383,11 +385,41 @@ body{
 .card-proyect p{
     width: 100%;
     margin: 0;
-    padding: 1em;}
+    padding: 1em;
+}
 
+/* contenedor de botones del articulo de proyecto*/
+.proyect-buttons{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 1em;
+}
+
+/* aplicado a cada boton del articulo de proyecto */
+.proyect-buttons a{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    border-radius: 20px;
+    padding: 1%;
+    background-color: grey;
+}
+
+/* aplicado al icono del boton */
+.proyect-buttons a img{
+    width: 30%; /* ancho necesaro para que el <p> pueda ubicarse a la derecha */
+    max-width: 32px; /* ancho maximo */
+}
+
+/* aplicado al texto del boton */
+.proyect-buttons a p{
+    width: 70%;
+    padding: 0;
+}
 .footer{
     width: 100%;
-
     height: 5vh;
     background-color: var(--black-transparent);
     color: white;
