--- a/css/style.css
+++ b/css/style.css
@@ -399,12 +399,13 @@ body{
 
 /* aplicado a cada boton del articulo de proyecto */
 .proyect-buttons a{
+    width: 30%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     border-radius: 20px;
     padding: 1%;
-    background-color: grey;
+    background-color: var(--black-button);
 }
 
 /* aplicado al icono del boton */
@@ -417,7 +418,9 @@ body{
 .proyect-buttons a p{
     width: 70%;
     padding: 0;
+    text-align: center;
 }
+
 .footer{
     width: 100%;
     height: 5vh;
