--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,8 @@ body{
     /*background-color: blueviolet;*/
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     scroll-margin-top: 10vh;
     padding-top: 3vh;
 }
@@ -347,6 +349,58 @@ body{
     padding: 1em;
 }
 
+/* estilos articulos de skills */
+.skill-article{
+    background-color: var(--black-article);
+    border-radius: var(--border-radius-article);
+    color: var(--white-color);
+    margin: 1%;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 128px;
+    position: relative;
+}
+
+@property --angle{
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+.glow-red::after, .glow-red::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    /*background-image: conic-gradient(#ff4545, #00ff99, #006aff, #ff0095, #ff4545);*/
+    background-image: conic-gradient(from var(--angle), transparent, red, transparent, transparent, red, transparent, transparent);
+    translate: -50% -50%; /* centra el cuadro rojo*/
+    z-index: -1; /* cuadro rojo por debajo*/
+    padding: 3px;
+    border-radius: 10px;
+    animation: 3s spin linear infinite;
+    opacity: 0;
+}
+
+@keyframes spin{
+    from{
+        --angle: 0deg;
+    }
+    to{
+        --angle: 360deg;
+    }
+}
+
+.glow-red:hover::before{
+    opacity: 1;
+}
+
+/* estilos articulos de proyectos */
 .card-proyect{
     width: 30%;
     margin: 1%;
