--- a/css/style.css
+++ b/css/style.css
@@ -34,18 +34,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: width 0.5s ease, height 0.5s ease;
 }
 
 .social-media-button::after{
     content: '';
     position: absolute;
-    height: 100%; /* agrandar width y height para que linear-gradient sobresalga por detras del boton*/
-    width: 100%;
+    height: 107%; /* agrandar width y height para que linear-gradient sobresalga por detras del boton*/
+    width: 102%;
     border-radius: 1000px;
     background-image: linear-gradient(to bottom right, #008cff, #e100ff);
     z-index: -1; /* este contenedor aparecera detras del boton */
     opacity: 0;
-    transition: width 0.5s ease, height 0.5s ease;;
 }
 
 .social-media-button img{
@@ -69,6 +69,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: width 0.5s ease, height 0.5s ease;
 }
 
 /* capa inferior, para que el boton simule un border con linear-gradient */
@@ -83,7 +84,9 @@ body{
 }
 
 .custom-button:hover{
-    z-index: 0; /* para visualizar todo el boton con linear-gradient */
+    z-index: 1; /* para visualizar todo el boton con linear-gradient */
+    box-shadow: 40px 0 100px #008cff, -40px 0 100px #e100ff;
+
 }
 
 /* efecto luz neon*/
@@ -211,38 +214,32 @@ body{
 .header{
     width: 100%;
     height: 100vh;
-    
     color: white;
     transition: height 0.5s ease;
     z-index: 100;/* situado por arriba de los demas elementos*/
     position: fixed;
     top: 0;
     left: 0;
+    background: linear-gradient(to right, #0e4674, #4b0a80);
 }
 
 .header-container{
     width: 100%;
     height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    background: linear-gradient(to right, #0e4674, #4b0a80);
     transition: height 0.5s ease;
+    display: flex;
+    flex-direction: column;
 }
 
 /* contenedor de titulo, subtitulo y botones de redes sociales */
 #title{
     width: 100%;
     height: 40vh;
-    position: absolute;
-    top: 0;
-    left: 0;
+    flex: 1 1 50%; /* Base 50%, crece y se achica */
+    transition: all 0.5s ease;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    flex: 1 1 50%; /* Base 50%, crece y se achica */
-    transition: all 0.5s ease;
 } 
 
 #title h1 {
@@ -267,6 +264,7 @@ body{
     height: 10vh;
     transition: width 0.5s ease, height 0.5s ease;
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -275,9 +273,6 @@ body{
 #image-header{
     width: 100%;
     height: 50vh;
-    position: absolute;
-    bottom: 0;
-    right: 0;
     flex: 1 1 50%; /* Base 50%, crece y se achica */
     transition: all 0.5s ease;
 }
@@ -299,7 +294,6 @@ body{
 .header.animated-header .header-container{
     height: 10vh;
     flex-direction: row;
-    flex-wrap: wrap;
 }
 
 .header.animated-header #title{
