cambiando nombre a la clase skill-article por dev-article

--- a/css/style.css
+++ b/css/style.css
@@ -464,7 +464,7 @@ body{
 }
 
 /* estilos articulos de skills */
-.skill-article{
+.dev-article{
     background-color: var(--black-article);
     border-radius: var(--border-radius-article);
     color: var(--white-color);
