--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,29 @@ body{
     opacity: 1;
 }
 
+/* efectos neon */
+
+.neon-white::after{
+    content: '';
+    position: absolute;
+    height: 107%; /* agrandar width y height para que linear-gradient sobresalga por detras del boton*/
+    width: 102%;
+    border-radius: 1000px;
+    background-image: var(--white-color);
+    z-index: -1; /* este contenedor aparecera detras del boton */
+    opacity: 0;
+}
+
+.neon-white img{
+    width: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+.neon-white:hover::after{
+    opacity: 1;
+}
+
 /* capa superior, botones inicialmente en negro */
 .custom-button{
     padding: 1em 2em;
@@ -297,15 +320,9 @@ body{
 }
 
 .open-page, .close-page {
-    
     z-index: 0;
-    bottom: 0;
-    left: 45%;
-    width: 10%;
-    height: 5%;
 
     border: none;
-    
     padding: 15px 40px;
     color: white;
     font-size: 18px;
@@ -316,21 +333,33 @@ body{
     background: linear-gradient(to left, #0e4674, #4b0a80);
 }
 
-
+/* trapecio */
 .open-page{
-    position: absolute;
+    position: relative;
     clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
 }
 
+.trapecio-wrapper{
+    position: relative;
+    bottom: 0;
+    left: 45%;
+    width: 10%;
+    height: 5%;
+    transition: filter 0.5s ease;
+}
+
+.trapecio-wrapper:hover {
+  filter: drop-shadow(0 0 8px white);
+}
+
+/* trapecio invertido */
 .close-page{
     position: relative;
     top: -5vh;
     display: none;
     clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 20% 100%);
+    width: 10%;
+    height: 5%;
 }
 
 .header.animated-header .open-page{
@@ -343,6 +372,9 @@ body{
     justify-content: center;
     align-content: center;
 }
+
+
+
 
 /* animaciones del header, agrega clase ".animated-header" desde js y cambia estilos */ 
 .header.animated-header{
